--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "bootstrap": "^4.4.0",
+    "netlify-cli": "^2.54.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.15.2",
     "tslib": "^1.10.0",
