--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.4.0",
+    "logrocket": "^1.0.9",
     "netlify-cli": "^2.54.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^9.15.2",
